--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav aria-label="main navigation">
         <a href="#about" class="muted">About</a>
         <a href="#earlier-life" class="muted">Earlier Life</a>
-        <a href="#hero" class="muted">Suheyb Mohamed</a>
+        <a href="#hero" class="muted">z u h a i p</a>
         <a href="#companies" class="muted">Companies</a>
         <a href="#contact" class="muted">Contact</a>
       </nav>
@@ -49,7 +49,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#earlier-life">Earlier Life</a>
-        <a href="#hero">Suheyb Mohamed</a>
+        <a href="#hero">z u h a i p</a>
         <a href="#companies">Companies</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -58,21 +58,10 @@
     <!-- HERO -->
     <section class="hero" role="region" aria-labelledby="hero-heading">
       <div class="hero-content">
-        <h1 id="hero-heading">Suheyb Mohamed</h1>
+        <h1 id="hero-heading">z u h a i p</h1>
         </div>
     </section>
 
-    <!-- COMPANY LOGOS -->
-    <section class="company-logos" aria-labelledby="logos-heading">
-        <h2 id="logos-heading">Companies</h2>
-      <div class="logos-container">
-        <img src="images/logo.png" alt="Company Logo 1" class="company-logo">
-        <img src="images/logo1.png" alt="Company Logo 2" class="company-logo">
-        <img src="images/logo3.png" alt="Company Logo 3" class="company-logo">
-        <img src="images/logo.png" alt="Company Logo 4" class="company-logo">
-        <img src="images/logo3.png" alt="Company Logo 5" class="company-logo">
-      </div>
-    </section>
 
     <!-- ABOUT ME -->
     <section id="about" class="section about" aria-labelledby="about-heading">
@@ -94,32 +83,34 @@
     <section id="companies" class="section" aria-labelledby="companies-heading">
       <h2 id="companies-heading">Companies</h2>
       <div class="companies-vertical" id="companiesGrid">
+
+        <!-- companies artilces-->
         <article class="company-item">
           <div class="company-logo-container">
-            <img src="images/logo.png" alt="ZMC Ventures Logo" class="company-logo-img">
+            <img src="images/logo1.png" alt="ZMC Academy" class="company-logo-img">
           </div>
           <div class="company-details">
-            <h3>ZMC Ventures</h3>
-            <p>Innovation-driven venture capital and business development company focused on emerging technologies and sustainable growth. We invest in early-stage startups with disruptive potential and provide strategic guidance to help them scale globally.</p>
+            <h3>ZMC Fx Academy</h3>
+            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
             <ul>
-              <li>Founded: 2020</li>
-              <li>Portfolio: 25+ companies</li>
-              <li>Focus: Technology, Healthcare, Fintech</li>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
             </ul>
           </div>
         </article>
 
         <article class="company-item">
           <div class="company-logo-container">
-            <img src="images/logo1.png" alt="Tech Solutions Logo" class="company-logo-img">
+            <img src="images/logo2.png" alt="Tech Solutions Logo" class="company-logo-img">
           </div>
           <div class="company-details">
-            <h3>Tech Solutions</h3>
-            <p>Technology consulting and software development services for startups and established businesses looking to scale digitally. We specialize in custom software development, cloud architecture, and digital transformation.</p>
+            <h3>Yirimi Fx Academy</h3>
+           <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
             <ul>
-              <li>Founded: 2018</li>
-              <li>Clients: 100+ businesses</li>
-              <li>Services: Web Development, Mobile Apps, Cloud Solutions</li>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
             </ul>
           </div>
         </article>
@@ -129,12 +120,54 @@
             <img src="images/logo3.png" alt="Design Studio Logo" class="company-logo-img">
           </div>
           <div class="company-details">
-            <h3>Design Studio</h3>
-            <p>Creative design agency specializing in brand identity, user experience, and digital product design for modern businesses. We help companies create compelling visual identities and user-centered digital experiences.</p>
+            <h3>Amaar Crypto Academy</h3>
+            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
             <ul>
-              <li>Founded: 2019</li>
-              <li>Projects: 200+ completed</li>
-              <li>Specialties: Brand Identity, UX/UI Design, Digital Marketing</li>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
+            </ul>
+          </div>
+        </article>
+        <article class="company-item">
+          <div class="company-logo-container">
+            <img src="images/logo4.png" alt="Design Studio Logo" class="company-logo-img">
+          </div>
+          <div class="company-details">
+            <h3>MAHADNAQE FASHION</h3>
+            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <ul>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
+            </ul>
+          </div>
+        </article>
+        <article class="company-item">
+          <div class="company-logo-container">
+            <img src="images/logo5.png" alt="Design Studio Logo" class="company-logo-img">
+          </div>
+          <div class="company-details">
+            <h3>Hogaan Dumar</h3>
+            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <ul>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
+            </ul>
+          </div>
+        </article>
+        <article class="company-item">
+          <div class="company-logo-container">
+            <img src="images/logo6.png" alt="Design Studio Logo" class="company-logo-img">
+          </div>
+          <div class="company-details">
+            <h3>Hiigsi Academy</h3>
+           <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <ul>
+              <li>Founded: 2024</li>
+              <li>clients: 70k+ Students</li>
+              <li>Services: Forex</li>
             </ul>
           </div>
         </article>
@@ -167,23 +200,17 @@
       <h2 id="contact-heading">Get In Touch</h2>
       <p>Let's connect and explore opportunities together</p>
       <div class="social-links">
-        <a href="https://instagram.com" class="social-link" target="_blank" rel="noopener">
+        <a href="https://www.facebook.com/share/1CngzsHnJs/?mibextid=wwXIfr" class="social-link" target="_blank" rel="noopener">
+          <svg viewBox="0 0 24 24">
+            <path d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"/>
+          </svg>
+          Facebook
+        </a>
+        <a href="https://www.instagram.com/zuhaip.10?igsh=MThkZHBpOXVrbWVkOQ%3D%3D&utm_source=qr" class="social-link" target="_blank" rel="noopener">
           <svg viewBox="0 0 24 24">
             <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
           </svg>
           Instagram
-        </a>
-        <a href="https://youtube.com" class="social-link" target="_blank" rel="noopener">
-          <svg viewBox="0 0 24 24">
-            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-          </svg>
-          YouTube
-        </a>
-        <a href="https://twitter.com" class="social-link" target="_blank" rel="noopener">
-          <svg viewBox="0 0 24 24">
-            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
-          </svg>
-          Twitter
         </a>
       </div>
     </section>
