--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
           </div>
           <div class="company-details">
             <h3>Yirimi Fx Academy</h3>
-           <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+           <p>Yirimi FX Signal is a trusted platform offering high-quality Forex signals to traders worldwide. Designed for both beginners and experienced investors, our signals help clients make smarter, faster, and more profitable trading decisions.</p>
             <ul>
               <li>Founded: 2024</li>
-              <li>clients: 70k+ Students</li>
-              <li>Services: Forex</li>
+              <li>Community: 3k+ active traders</li>
+              <li>Services: Real-time Forex signals and market insights</li>
             </ul>
           </div>
         </article>
@@ -121,11 +121,14 @@
           </div>
           <div class="company-details">
             <h3>Amaar Crypto Academy</h3>
-            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <p>Amaar Crypto Academy is a leading institution offering specialized training and consultancy in the cryptocurrency markets.
+            Crypto trading education
+            Premium crypto signals
+            Market analysis and strategy</p>
             <ul>
-              <li>Founded: 2024</li>
-              <li>clients: 70k+ Students</li>
-              <li>Services: Forex</li>
+              <li>Founded: 2025</li>
+              <li>Community: 2k+ Students</li>
+              <li>Services: Crypto signals and training</li>
             </ul>
           </div>
         </article>
@@ -135,11 +138,11 @@
           </div>
           <div class="company-details">
             <h3>MAHADNAQE FASHION</h3>
-            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <p>is a leading fashion brand that offers stylish and modern collections, serving both new and experienced customers who want to enhance their wardrobe. We specialize in creating unique designs that blend quality, creativity, and comfort.</p>
             <ul>
               <li>Founded: 2024</li>
-              <li>clients: 70k+ Students</li>
-              <li>Services: Forex</li>
+              <li>clients: 10k+ Customers</li>
+              <li>Services: Fashion Consulting, Accessories & Online Shopping</li>
             </ul>
           </div>
         </article>
@@ -149,11 +152,11 @@
           </div>
           <div class="company-details">
             <h3>Hogaan Dumar</h3>
-            <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+            <p>our academy is proudly led by women and dedicated to empowering women through a wide range of educational programs.</p>
             <ul>
               <li>Founded: 2024</li>
-              <li>clients: 70k+ Students</li>
-              <li>Services: Forex</li>
+              <li>clients: 2000+ students</li>
+              <li>Services: business, leadership, and women’s empowerment programs</li>
             </ul>
           </div>
         </article>
@@ -163,11 +166,16 @@
           </div>
           <div class="company-details">
             <h3>Hiigsi Academy</h3>
-           <p>ZMC FX Academy is a leading institution that offers training and consultancy in Forex markets, serving both beginner and experienced traders who seek to enhance their investment skills. We specialize in.</p>
+           <p>Hiigsi Academy is a dynamic institution offering professional training and consultancy 
+              • Language courses (English, Arabic, Somali & more)
+              • Graphic design & video editing
+              • Digital entrepreneurship & online income
+              • Women’s empowerment & leadership development
+           </p>
             <ul>
               <li>Founded: 2024</li>
-              <li>clients: 70k+ Students</li>
-              <li>Services: Forex</li>
+              <li>Community: 5,000+ active learners</li>
+              <li> Programs Offered</li>
             </ul>
           </div>
         </article>
