--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
     <!-- HERO -->
     <section class="hero" role="region" aria-labelledby="hero-heading">
       <div class="hero-content">
-        <h1 id="hero-heading">z u h a i p</h1>
+        <h1 id="hero-heading">A man is made from pain</h1>
+         <h3 id="hero-heading"><em> rejection, failure and losses</em></h3>
         </div>
     </section>
 
 
-    <!-- ABOUT ME -->
+  
     <section id="about" class="section about" aria-labelledby="about-heading">
       <div class="image-container">
         <img src="images/old.jpg" alt="About me photo 1" class="rotated-image">
@@ -71,9 +72,16 @@
       </div>
       <div class="about-text">
         <h2 id="about-heading">About Me</h2>
-        <p>I'm a passionate entrepreneur and creative professional with a diverse background in business development and innovation. My journey has been shaped by curiosity, determination, and a drive to create meaningful impact through technology and design.</p>
-        <p>With years of experience in various industries, I've developed a unique perspective on problem-solving and building sustainable businesses. I believe in the power of collaboration and continuous learning.</p>
-          </div>
+        <p>Name: Suhayb Maxamed Cabdilaahi</p>
+        <p>Age: 25</p>
+
+        <p>Dreams: CEO, Trader, Investor</p>
+
+        <p>I am a young and ambitious dreamer with the vision to build, trade, and invest in ways that create lasting impact. I believe challenges are opportunities, and every setback is a lesson pushing me closer to success.</p>
+
+        <p><em>“Success doesn’t come to those who wait — it comes to those who create.”</em></p>
+
+      </div>
     </section>
 
     <!-- SEPARATOR -->
@@ -197,9 +205,8 @@
       <div class="earlier-life-text">
         
         <h2 id="earlier-life-heading">Earlier Life</h2>
-        <p>My journey began in a small town where I learned the value of hard work and determination. From an early age, I was fascinated by technology and business, spending countless hours learning and experimenting with new ideas.</p>
-        <p>Those formative years taught me resilience, creativity, and the importance of thinking differently. I discovered my passion for entrepreneurship through various small projects and ventures that shaped my understanding of what it means to build something meaningful.</p>
-        <p>This foundation continues to influence my approach to business and innovation today, reminding me that great things often start with simple ideas and unwavering commitment.</p>
+        <p>Suhayb Maxamed Cabdilaahi was born and raised with a strong sense of curiosity and determination. From an early age, he showed a passion for learning, leadership, and self-improvement. Growing up, he was always inspired by the idea of creating opportunities rather than waiting for them, which later shaped his vision of becoming a CEO, trader, and investor..</p>
+        <p>His early years were marked by resilience, discipline, and the belief that every experience — whether good or challenging — carried a lesson that could help him grow stronger. This foundation became the driving force behind his ambitions and long-term goals.</p>
       </div>
     </section>
 
