--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   
     <section id="about" class="section about" aria-labelledby="about-heading">
       <div class="image-container">
-        <!-- <img src="images/old.jpg" alt="About me photo 1" class="rotated-image">
-        <img src="images/old1.jpg" alt="About me photo 2" class="rotated-image"> -->
+        <img src="images/old.jpg" alt="About me photo 1" class="rotated-image">
+        <img src="images/old1.jpg" alt="About me photo 2" class="rotated-image">
       </div>
       <div class="about-text">
         <h2 id="about-heading">About Me</h2>
